--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ a, a:hover{
 	text-decoration: none;
 }
 
+/* inscription */
+
+.pb_inscription{
+	margin: auto;
+	padding-top: 20px;
+}
 
 /*header*/
 
